<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity -->
    <!-- Free App Notifier Activity -->
    <string name="app_name">Free App Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_rate">Rate</string>
    <string name="by_label">by</string>
    <string name="developer">Developer Name</string>
    <string name="price_was">$#.##</string>
    <string name="price_now">FREE</string>
    <string name="app_rating_text">#.#</string>
    <string name="app_icon">App Icon</string>
    <string name="app_name_header">App Name</string>
    <string name="category">Other</string>
    <string name="category_label">Categorized Under</string>
    <string name="description">Description</string>
    <string name="buy">Buy Now</string>
    <string name="title_activity_about">About</string>

    <!-- Preferences -->
    <!-- Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- TimePreference Buttons -->
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <!-- Enable Notifications -->
    <string name="pref_enabled">Enable Notifications</string>

    <!-- Schedule Notifications -->
    <string name="pref_schedule_notifications_title">Schedule Notifications</string>
    <string name="pref_notification_time">Notification Time</string>
    <string name="pref_notification_sound">Notification Sound</string>
    <string name="pref_notification_sound_none">None</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_show_on_boot">Show on boot</string>

    <!-- Customize Notifications -->
    <string name="pref_customize_notifications_title">Customize Notifications</string>
    <string name="pref_category_filters_title">Category Filters</string>
    <string name="pref_category_filters_summ">Filter which categories to show notifications for.</string>
    <string name="pref_app_to_launch_title">Notification Click Action</string>
    <string name="pref_app_to_launch_summ">Select app to launch when notification is clicked.</string>
    <string name="pref_expandable_notification">Expandable Notification</string>
    <string name="pref_expandable_notification_summ">Show app description in expandable notification.</string>
    <string name="pref_notify_icon_color">Notification Icon</string>

    <!-- Icons -->
    <string name="pref_icon_app_entry">App Icon</string>
    <string name="pref_icon_orange_entry">Orange</string>
    <string name="pref_icon_blue_entry">Blue</string>
    <string name="pref_icon_red_entry">Red</string>
    <string name="pref_icon_green_entry">Green</string>
    <string name="pref_icon_grayscale_entry">Grayscale</string>
    <string name="pref_icon_transparent_entry">Transparent</string>

    <!-- Categories -->
    <string name="category_books_comics">Books &amp; Comics</string>
    <string name="category_city_info">City Info</string>
    <string name="category_communication">Communication</string>
    <string name="category_cooking">Cooking</string>
    <string name="category_education">Education</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_finance">Finance</string>
    <string name="category_games">Games</string>
    <string name="category_health_fitness">Health &amp; Fitness</string>
    <string name="category_kids">Kids</string>
    <string name="category_lifestyle">Lifestyle</string>
    <string name="category_music">Music</string>
    <string name="category_navigation">Navigation</string>
    <string name="category_news_magazines">News &amp; Magazines</string>
    <string name="category_novelty">Novelty</string>
    <string name="category_other">Other</string>
    <string name="category_photography">Photography</string>
    <string name="category_podcasts">Podcasts</string>
    <string name="category_productivity">Productivity</string>
    <string name="category_real_estate">Real Estate</string>
    <string name="category_reference">Reference</string>
    <string name="category_ringtones">Ringtones</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_social_networking">Social Networking</string>
    <string name="category_sports">Sports</string>
    <string name="category_themes">Themes</string>
    <string name="category_travel">Travel</string>
    <string name="category_utilities">Utilities</string>
    <string name="category_weather">Weather</string>
    <string name="category_web_browsers">Web Browsers</string>
    
    <!-- Amazon Apps -->
    <string name="app_amazon_appstore_entry">Amazon App Store</string>
    <string name="app_amazon_shopping_entry">Amazon Shopping App</string>
    <string name="app_web_browser_entry">Web Browser</string>

</resources>
